[package]
name = "rusty_beagle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bme280 = "0.5.1"
gpiod = "0.3.0"
linux-embedded-hal = "0.4.0"
log = "0.4.22"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
spidev = "0.6.0"
syslog = "^7.0"
rumqttc = "0.24.0"
